syntax = "proto3";
option java_package = "fr.sos.projetmines";
option java_multiple_files = true;

import "OrowanOperation.proto";

message StandEnablingRequest {
  int32 standId = 1;
}

message StandDisablingRequest {
  int32 standId = 1;
}

service StandManagement {
  rpc EnableStand (StandEnablingRequest) returns (OrowanOperationResult);
  rpc DisableStand (StandDisablingRequest) returns (OrowanOperationResult);
}